@@ -2,10 +2,7 @@
 const { getMetadataAws } = require('./aws')
 const { getMetadataAzure } = require('./azure')
 const { getMetadataGcp } = require('./gcp')
-const { getMetadataAwsLambda } = require('./lambda')
 const { CallbackCoordination } = require('./callback-coordination')
-
-const { isLambdaExecutionEnviornment } = require('../lambda')
 
 const logging = require('../logging')
 
@@ -115,12 +112,6 @@ class CloudMetadata {
       })
     }
 
-    if (this.shouldFetchAwsLambda()) {
-      fetcher.schedule((fetcher) => {
-        fetcher.recordResult(null, getMetadataAwsLambda(this.serviceName))
-      })
-    }
-
     fetcher.on('result', function (result) {
       cb(null, result)
     })
@@ -142,10 +133,6 @@ class CloudMetadata {
 
   shouldFetchAws () {
     return this.cloudProvider === 'auto' || this.cloudProvider === 'aws'
-  }
-
-  shouldFetchAwsLambda () {
-    return isLambdaExecutionEnviornment()
   }
 }
 
