@@ -740,11 +740,6 @@ function getBaseClientConfig (conf, agent) {
     clientLogger = agent.logger.child({ 'event.module': 'apmclient' })
   }
 
-  let cloudProvider = conf.cloudProvider
-  if (isLambdaExecutionEnviornment()) {
-    cloudProvider = 'none'
-  }
-
   const clientConfig = {
     agentName: 'nodejs',
     agentVersion: version,
@@ -788,10 +783,17 @@ function getBaseClientConfig (conf, agent) {
     kubernetesNodeName: conf.kubernetesNodeName,
     kubernetesNamespace: conf.kubernetesNamespace,
     kubernetesPodName: conf.kubernetesPodName,
-    kubernetesPodUID: conf.kubernetesPodUID,
+    kubernetesPodUID: conf.kubernetesPodUID
+  }
 
-    // Cloud metadata fetching
-    cloudMetadataFetcher: (new CloudMetadata(cloudProvider, conf.logger, conf.serviceName))
+  // Metadata handling.
+  if (isLambdaExecutionEnviornment()) {
+    // Tell the Client to wait for a subsequent `.setExtraMetadata()` call
+    // before allowing intake requests. This will be called by `apm.lambda()`
+    // on first Lambda function invocation.
+    clientConfig.expectExtraMetadata = true
+  } else if (conf.cloudProvider !== 'none') {
+    clientConfig.cloudMetadataFetcher = new CloudMetadata(conf.cloudProvider, conf.logger, conf.serviceName)
   }
 
   if (conf.errorMessageMaxLength !== undefined) {
