@@ -3,8 +3,50 @@
 const constants = require('./constants')
 const shimmer = require('./instrumentation/shimmer')
 
+// https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-aws-lambda.md#deriving-cold-starts
+let isColdStart = true
+
 function elasticApmAwsLambda (agent) {
   const log = agent.logger
+
+  function getLambdaMetadata (context) {
+    // E.g. 'arn:aws:lambda:us-west-2:123456789012:function:my-function:someAlias'
+    const arnParts = context.invokedFunctionArn.split(':')
+    const serviceId = arnParts.slice(0, 7).join(':')
+    const cloudAccountId = arnParts[4]
+
+    const lambdaMetadata = {
+      service: {
+        name: process.env.AWS_LAMBDA_FUNCTION_NAME,
+        id: serviceId,
+        version: process.env.AWS_LAMBDA_FUNCTION_VERSION,
+        framework: {
+          // Passing this service.framework.name to Client#setExtraMetadata()
+          // ensures that it "wins" over a framework name from
+          // `agent.setFramework()`, because in the client `_extraMetadata`
+          // wins over `_conf.metadata`.
+          name: 'AWS Lambda'
+        },
+        runtime: {
+          name: process.env.AWS_EXECUTION_ENV
+        },
+        node: {
+          configured_name: process.env.AWS_LAMBDA_LOG_STREAM_NAME
+        }
+      },
+      cloud: {
+        provider: 'aws',
+        region: process.env.AWS_REGION,
+        service: {
+          name: 'lambda'
+        },
+        account: {
+          id: cloudAccountId
+        }
+      }
+    }
+    return lambdaMetadata
+  }
 
   function captureContext (trans, payload, context, result) {
     trans.setCustomContext({
@@ -96,6 +138,15 @@ function elasticApmAwsLambda (agent) {
 
     return function wrappedLambda (payload, context, callback) {
       log.trace({ awsRequestId: context && context.awsRequestId }, 'lambda: fn start')
+
+      if (isColdStart) {
+        isColdStart = false
+        if (agent._transport) {
+          log.trace({ awsRequestId: context && context.awsRequestId }, 'lambda: setExtraMetadata')
+          agent._transport.setExtraMetadata(getLambdaMetadata(context))
+        }
+      }
+
       let parentId
       let tracestate
       if (payload.headers !== undefined) {
